make trees folder and new node class in it

--- a/c-sharp/DataStructures/DataStructures/DataStructures.csproj
+++ b/c-sharp/DataStructures/DataStructures/DataStructures.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Trees\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Trees\" />
+  </ItemGroup>
 </Project>
