file scaffolding and toc links

--- a/c-sharp/DataStructures/CodeChallenges/CodeChallenges.csproj
+++ b/c-sharp/DataStructures/CodeChallenges/CodeChallenges.csproj
@@ -8,4 +8,10 @@
   <ItemGroup>
     <ProjectReference Include="..\DataStructures\DataStructures.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Sorting\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Sorting\" />
+  </ItemGroup>
 </Project>
