--- a/c-sharp/DataStructures/CodeChallengesTests/CodeChallengesTests.csproj
+++ b/c-sharp/DataStructures/CodeChallengesTests/CodeChallengesTests.csproj
@@ -24,8 +24,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="BinaryTreeChallenges\" />
+    <None Remove="SortingTests\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="BinaryTreeChallenges\" />
+    <Folder Include="SortingTests\" />
   </ItemGroup>
 </Project>
